# sigoREST

./: .gitignore  CLAUDE.md  PROJECT-2.md  README.md  README_CN.md  README_EN.md  RETROSPECTIVE.md  TODO.md  go.mod  mammouth-20260415.csv  zeitstempel.txt
chinese/: KEYWORDS.md  PITCH.txt  README.md
clients/clisp-exp/: README.md  RETROSPECTIVE.md  sigoclient.lisp  test.lisp
clients/clisp-exp/examples/: basic.lisp  streaming.lisp
clients/cpp/: CMakeLists.txt
clients/cpp/core/: CMakeLists.txt
clients/cpp/core/include/sigorest/: client.hpp  models.hpp
clients/cpp/core/src/: client.cpp
clients/cpp/examples/basic/: CMakeLists.txt  main.cpp
clients/cpp/examples/qt-translator/: CMakeLists.txt  main.cpp
clients/cpp/qt/: CMakeLists.txt
clients/cpp/qt/include/sigorest/qt/: client.hpp
clients/cpp/qt/src/: client.cpp
clients/go/: README.md  client.go  go.mod
clients/go/examples/basic/: main.go
clients/go/examples/listmodels/: main.go
clients/go/examples/session/: main.go
clients/javascript/: README.md  client.js  package.json
clients/javascript/examples/: basic.js  listmodels.js  session.js
clients/python/: README.md  pyproject.toml  setup.py
clients/python/examples/: async_chat.py  basic_chat.py  list_models.py  session_chat.py  streaming_chat.py
clients/python/sigoclient/: __init__.py  client.py
clients/python/src/sigo_client/: __init__.py  client.py  models.py
cmd/sigoE/: main.go
docs/: deepseek_beats_opus.txt  response_1771701620814.json  retrospektive-20260513.md  retrospektive-project2-2026-04-15.md  retrospektive-sigorest-verbindung-2025-02-26.md  sigorest-action-items.md  systemd-install.md
docs/superpowers/plans/: 2026-04-15-dynamischer-modellabruf.md  2026-04-21-cpp-client.md  2026-04-21-finish-reason.md  2026-04-21-system-prompt-edge-case-fix.md  2026-04-21-usage-field-fix.md  2026-06-17-multi-channel.md
docs/superpowers/specs/: 2026-04-15-modellabruf-design.md  2026-04-21-cpp-client-design.md  2026-04-21-system-prompt-api-design.md  2026-04-21-usage-field-fix-design.md  2026-06-17-multi-channel-design.md
sigoREST/: main.go  main_test.go  memory.json  models.csv
sigoengine/: README.md  channel.go  channel_health.go  channel_health_test.go  channel_manager.go  channel_manager_test.go  channel_test.go  engine.go  env.go  finish_reason_test.go  loadconfig_channel.go  memory.go  models.go  models_registry.go  provider_fetchers.go  retry.go  retry_test.go  session_memory.go  shortcode.go  shortcode_test.go  usage_test.go  version.go
